--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -64,7 +64,7 @@ The dataRetrieval package was created to simplify the process of getting hydrolo
 %------------------------------------------------------------ 
 The dataRetrieval package was created to simplify hydrologic data retrieval.  The options are web or user-produced files.
 
-Here ...
+Here is some text.
 
 \newpage
 %------------------------------------------------------------ 
