--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -57,27 +57,28 @@
 %------------------------------------------------------------
 \section{Introduction to dataRetrieval}
 %------------------------------------------------------------ 
-The dataRetrieval package was created to simplify the process of getting hydrologic data in the R enviornment. It has been specifically designed to work seamlessly with the EGRET package: Exploration and Graphics for RivEr Trends (EGRET).
+The dataRetrieval package was created to simplify the process of getting hydrologic data in the R enviornment. It has been specifically designed to work seamlessly with the EGRET package: Exploration and Graphics for RivEr Trends (EGRET). See: \url{https://github.com/USGS-R/EGRET/wiki} for information on EGRET.
 
-%------------------------------------------------------------
-\subsection{What is dataRetrieval?}
-%------------------------------------------------------------ 
-The dataRetrieval package was created to simplify hydrologic data retrieval.  The options are web or user-produced files.
+There is a plethora of hydrological data available on the web. This package is designed specifically to load United States Geological Survey (USGS) hydrologic data to the R enviornment. This includes daily values, real-time (unit values), site information, and water quality sample data. 
 
-Here is some text. Here is some more.
-
-\newpage
 %------------------------------------------------------------ 
 \section{Getting Started}
 %------------------------------------------------------------ 
 This section describes the options for downloading and installing the dataRetrieval package.
 %------------------------------------------------------------
-\subsection{Installing dataRetrieval from downloaded binary:}
+\subsection{New to R?}
 %------------------------------------------------------------ 
-The dataRetrieval pacakage is available for download at \url{https://github.com/USGS-CIDA/WRTDS/downloads}.  If the package's tar.gz file is saved in R's working directory, then the following command will fully install the package:
+If you are new to R, you will need to first install the latest version of R, which can be found here: \url{http://www.r-project.org/}.
+
+There are many options for running and editing R code, one nice enviornment to learn R is RStudio. RStudio can be downloaded here: \url{http://rstudio.org/}. Once R and RStudio are installed, the dataRetrieval package needs to be installed as described in the next section.
+
+%------------------------------------------------------------
+\subsection{R User: Installing dataRetrieval from downloaded binary}
+%------------------------------------------------------------ 
+The latest dataRetrieval package build is available for download at \url{https://github.com/USGS-R/dataRetrieval/blob/master/dataRetrieval_1.2.1.tar.gz}.  If the package's tar.gz file is saved in R's working directory, then the following command will fully install the package:
 
 <<installFromWD,eval = FALSE>>=
-install.packages("dataRetrieval_1.2.0.tar.gz", 
+install.packages("dataRetrieval_1.2.1.tar.gz", 
                  repos=NULL, type="source")
 @
 
@@ -85,7 +86,7 @@ If the downloaded file is stored in an alternative location, include the path in
 
 <<installFromFile,eval = FALSE>>=
 install.packages(
-  "C:/RPackages/Statistics/dataRetrieval_1.2.0.tar.gz", 
+  "C:/RPackages/Statistics/dataRetrieval_1.2.1.tar.gz", 
   repos=NULL, type="source")
 @
 
@@ -93,32 +94,173 @@ A Mac example looks like this:
 
 <<maxExample,eval = FALSE>>=
 install.packages(
-  "/Users/userA/RPackages/Statistic/dataRetrieval_1.2.0.tar.gz", 
+  "/Users/userA/RPackages/Statistic/dataRetrieval_1.2.1.tar.gz", 
   repos=NULL, type="source")
 @
 
-It is a good idea to re-start the R enviornment after installing the package, especially if installing an updated version. Some users have found it necessary to delete the previous version's package folder before installing newer version of dataRetrieval. If you are experiencing issues after updating a package, trying deleting the package folder - the default location for Windows is something like this: C:/Users/userA/Documents/R/win-library/2.15/dataRetrieval the default for a Mac: /Users/userA/Library/R/2.15/library/dataRetrieval Then, re-install the package using the directions above. Moving to CRAN should solve this problem.
+It is a good idea to re-start the R enviornment after installing the package, especially if installing an updated version (that is, restart RStudio). Some users have found it necessary to delete the previous version's package folder before installing newer version of dataRetrieval. If you are experiencing issues after updating a package, trying deleting the package folder - the default location for Windows is something like this: C:/Users/userA/Documents/R/win-library/2.15/dataRetrieval, and the default for a Mac: /Users/userA/Library/R/2.15/library/dataRetrieval. Then, re-install the package using the directions above. Moving to CRAN should solve this problem.
 
 
 %------------------------------------------------------------
-\subsection{Installing dataRetrieval from gitHub:}
+\subsection{R Developers: Installing dataRetrieval from gitHub}
 %------------------------------------------------------------
 Alternatively, R-developers can install the latest version of dataRetrieval directly from gitHub using the devtools package.  devtools is available on CRAN.  Simpley type the following commands into R to install the latest version of dataRetrieval available on gitHub.  Rtools (for Windows) and latex tools are required.
 
 <<gitInstal,eval = FALSE>>=
 library(devtools)
-install_github("dataRetrieval", "USGS-CIDA")
+install_github("dataRetrieval", "USGS-R")
 @
-To then open the library, simpley type:
+To then open the library, simply type:
 
 <<openLibrary>>=
 library(dataRetrieval)
 @
 
+\newpage
 %------------------------------------------------------------
-\subsection{A Simple Web Retrieval Example}
+\section{Raw Data: USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-In this example, we use 3 dataRetrieval functions to get daily streamflow data and inorganic nitrogen sample results, and site information for a USGS gaging station with the ID 06934500.  The station is Missouri River at Hermann, MO (which is discovered in the INFO dataset).
+In this section, we will run through 4 examples, documenting how to get raw data from the web. This includes historical daily values, real-time current values, site information, and water quality data. 
+%------------------------------------------------------------
+\subsection{USGS Web Retrieval Introduction}
+%------------------------------------------------------------
+The United States Geological Survey organizes their hydrological data in fairly standard structure.  Gage stations are located throughout the United States, each station has a unique ID.  Often (but not always), these ID's are 8 digits.  The first step to finding data is discoving this 8-digit ID. One potential tool for discovering data is Environmental Data Discovery and Transformation (EnDDaT): \url{http://cida.usgs.gov/enddat/}.  Follow the example in the User's Guide to learn how to discover USGS stations and available data from any location in the United States. Essentially, you can create a Project Location on the map, set a bounding box (in miles), then search for USGS Time Series and USGS Water Quality Data. Locations, ID's, available data, and available time periods will load on the map and appropriate tabs.
+
+Once the site-ID is known, the next required input for USGS data retrievals is the 'parameter code'.  This is a 5-digit code that specifies what measured paramater is being requested.  A complete list of possible USGS parameter codes can be found here: 
+
+\url{http://nwis.waterdata.usgs.gov/usa/nwis/pmcodes?radio_pm_search=param_group&pm_group=All+--+include+all+parameter+groups&pm_search=&casrn_search=&srsname_search=&format=html_table&show=parameter_group_nm&show=parameter_nm&show=casrn&show=srsname&show=parameter_units}
+
+Not every station will measure all parameters. The following is a list of commonly measured parameters:
+<<openLibrary, echo=FALSE>>=
+library(xtable)
+@
+
+<<label=tableParameterCodes, echo=FALSE,results=tex>>=
+pCode <- c('00060', '00065', '00010','00045','00400')
+shortName <- c("Discharge [cfs]","Gage height [ft]","Temperature [C]", "Precipitation [in]", "pH")
+
+data.df <- data.frame(pCode, shortName, stringsAsFactors=FALSE)
+
+data.table <- xtable(data.df,
+                     caption="Commonly found USGS Parameter Codes")
+print(data.table, 
+      caption.placement="top")
+@
+
+For real-time data, the parameter code and site ID will suffice.  The USGS stores historical data as daily values however.  The statistical process used to store the daily data is the final requirement for daily value retrievals.  A 5-digit 'stat code' specifies the requested processing.  A complete list of possible USGS stat codes can be found here:
+
+\url{http://nwis.waterdata.usgs.gov/nwis/help/?read_file=stat&format=table}
+
+The most common stat codes are:
+<<label=tableStatCodes, echo=FALSE,results=tex>>=
+StatCode <- c('00001', '00002', '00003','00008')
+shortName <- c("Maximum","Minimum","Mean", "Median")
+
+data.df <- data.frame(StatCode, shortName, stringsAsFactors=FALSE)
+
+data.table <- xtable(data.df,
+                     caption="Commonly found USGS Stat Codes")
+print(data.table, 
+      caption.placement="top")
+@
+
+
+We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate and nitrogen have been measured dating back to 1964.
+
+%------------------------------------------------------------
+\subsection{USGS Daily Value Retrievals}
+%------------------------------------------------------------
+To obtain historic daily records of USGS data, use the retrieveNWISData function. The arguments for this function are siteNumber, parameterCd, startDate, endDate, statCd, and a logical (true/false) interactive. There are 2 default argument: statCd defaults to "00003" and interactive defaults to TRUE.  If you want to use the default values, you do not need to list them in the function call. Setting the 'interactive' option to true will walk you through the function. It might make more sense to run large batch collections with the interactive option set to FALSE. 
+
+The dates (start and end) need to be in the format "YYYY-MM-DD".  Setting the start date to "" will indicate to the program to ask for the earliest date, setting the end date to "" will ask for the latest available date.
+
+<<label=getNWISDaily, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00060"  # Discharge in cubic feet per second
+startDate <- ""
+endDate <- ""
+
+discharge <- retrieveNWISData(siteNumber, parameterCd, startDate, endDate)
+@
+
+A dataframe is returned that looks like the following:
+<<dischargeData, echo=FALSE>>=
+head(discharge)
+@
+The structure of the dataframe is:
+<<dischargeStruture, echo=FALSE>>=
+str(discharge)
+@
+Note that dateTime is imported as a Date, value is a number, and code is a string.  USGS codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of qualification codes can be found here:
+\url{http://waterdata.usgs.gov/usa/nwis/help?codes_help}
+
+An example that doesn't use the defaults would be a request for maximum daily temperature in early 2012:
+<<label=getNWIStemperature, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00010,00060"  # Temperature and discharge
+statCd <- "00001,00003"  #mean and maximum
+startDate <- "2012-01-01"
+endDate <- "2012-06-30"
+
+temperature <- retrieveNWISData(siteNumber, parameterCd, startDate, endDate, StatCd=statCd)
+@
+
+Daily data is pulled from \url{http://waterservices.usgs.gov/rest/DV-Test-Tool.html}.
+
+%------------------------------------------------------------
+\subsection{USGS Unit Value Retrievals}
+%------------------------------------------------------------
+We can also get real-time, instantaneous measurements using the retrieveUnitNWISData function:
+<<label=getNWISUnit, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00060"  # Discharge in cubic feet per second
+startDate <- as.character(Sys.Date())
+endDate <- as.character(Sys.Date())
+
+dischargeToday <- retrieveUnitNWISData(siteNumber, parameterCd, startDate, endDate)
+@
+Which produces the following dataframe:
+<<dischargeData, echo=FALSE>>=
+head(dischargeToday)
+@
+The structure of the dataframe is:
+<<dischargeStruture, echo=FALSE>>=
+str(dischargeToday)
+@
+Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}.
+
+%------------------------------------------------------------
+\subsection{USGS Site Information Retrievals}
+%------------------------------------------------------------
+To obtain all of the available site information, use the getSiteFileData function:
+<<label=getSite, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+ChopTankInfo <- getSiteFileData(siteNumber)
+@
+
+The available date for these for the USGS sites are:
+<<siteColnames, echo=TRUE>>=
+colnames(ChopTankInfo)
+@
+Site information is obtained from \url{http://waterservices.usgs.gov/rest/Site-Test-Tool.html}
+
+%------------------------------------------------------------
+\subsection{USGS Water Quality Retrievals}
+%------------------------------------------------------------
+Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The function is getQWData.
+
+
+
+
+
+%------------------------------------------------------------
+\section{Polished Data: USGS Web Retrieval Examples}
+%------------------------------------------------------------ 
+In this example, we use 3 dataRetrieval functions to get daily streamflow data and inorganic nitrogen sample results, and site information for a USGS gaging station with the ID 06934500.  The station is Missouri River at Hermann, MO (which is discovered in the INFO dataset). Rather than see the raw output from NWIS, we 
 
 <<firstExample>>=
 Daily <- getDVData("06934500","00060","1970-10-01","2011-09-30")
@@ -131,30 +273,6 @@ INFO$station.nm
 
 Sample <- mergeReport()
 @
-
-
-In the next section, we will go into detail the available functions in dataRetrieval, their required input and generated output.
-
-\newpage
-%------------------------------------------------------------
-\section{Function Details}
-%------------------------------------------------------------
-
-%------------------------------------------------------------
-\subsection{Daily Value Retrievals}
-%------------------------------------------------------------
-
-
-%------------------------------------------------------------
-\subsection{Water Quality Retrievals}
-%------------------------------------------------------------
-
-
-%------------------------------------------------------------
-\subsection{Site Information Retrievals}
-%------------------------------------------------------------
-
-
 
 \newpage
 
