--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -120,7 +120,7 @@ library(dataRetrieval)
 %------------------------------------------------------------
 \section{Raw Data: USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-In this section, we will run through 4 examples, documenting how to get raw data from the web. This includes historical daily values, real-time current values, site information, and water quality data. 
+In this section, we will run through 5 examples, documenting how to get raw data from the web. This includes historical daily values, real-time current values, water quality data, site information, and measured parameter information. 
 %------------------------------------------------------------
 \subsection{USGS Web Retrieval Introduction}
 %------------------------------------------------------------
@@ -192,10 +192,10 @@ The structure of the dataframe is:
 <<dischargeStruture, echo=FALSE>>=
 str(discharge)
 @
-Note that dateTime is imported as a Date, value is a number, and code is a string.  USGS codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of qualification codes can be found here:
+Note that dateTime is automatically imported as a Date. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS remark codes are often "A" (approved for publication) or "P" (provisional data subject to revision). A more complete list of remark codes can be found here:
 \url{http://waterdata.usgs.gov/usa/nwis/help?codes_help}
 
-An example that doesn't use the defaults would be a request for maximum daily temperature in early 2012:
+Another example that doesn't use the defaults would be a request for mean and maximum daily temperature and discharge in early 2012:
 <<label=getNWIStemperature, echo=TRUE>>=
 # Using defaults:
 siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
@@ -204,10 +204,37 @@ statCd <- "00001,00003"  #mean and maximum
 startDate <- "2012-01-01"
 endDate <- "2012-06-30"
 
-temperature <- retrieveNWISData(siteNumber, parameterCd, startDate, endDate, StatCd=statCd)
+temperatureAndFlow <- retrieveNWISData(siteNumber, parameterCd, 
+                  startDate, endDate, StatCd=statCd,interactive=FALSE)
 @
 
-Daily data is pulled from \url{http://waterservices.usgs.gov/rest/DV-Test-Tool.html}.
+Daily data is pulled from \url{http://waterservices.usgs.gov/rest/DV-Test-Tool.html}. 
+
+An example of plotting the above data:
+<<label=getNWIStemperaturePlot, echo=TRUE>>=
+par(mar=c(5,4,4,5)+.1)
+with(temperatureAndFlow, plot(
+  datetime, X01_00010_00003,
+  xlab="Date",ylab="Temperature [C]"
+  ))
+par(new=TRUE)
+with(temperatureAndFlow, plot(
+  datetime, X02_00060_00003,
+  col="red",type="l",xaxt="n",yaxt="n",xlab="",ylab="",axes=FALSE
+  ))
+axis(4,col="red",col.axis="red")
+mtext("Discharge [cfs]",side=4,line=3,col="red")
+@
+\begin{figure}
+\begin{center}
+<<label=fig1, fig=TRUE,echo=FALSE>>=
+<<getNWIStemperaturePlot>>
+@
+\end{center}
+\caption{Temperature and discharge plot of Choptank River.}
+\end{figure}
+
+There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
 
 %------------------------------------------------------------
 \subsection{USGS Unit Value Retrievals}
@@ -230,7 +257,28 @@ The structure of the dataframe is:
 <<dischargeStruture, echo=FALSE>>=
 str(dischargeToday)
 @
-Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}.
+Note that time now becomes important, so the dateTime is a POSIXct, and the time zone is included. Data is pulled from \url{http://waterservices.usgs.gov/rest/IV-Test-Tool.html}. There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package.
+
+%------------------------------------------------------------
+\subsection{USGS Water Quality Retrievals}
+%------------------------------------------------------------
+Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The function is getQWData, with the similar input arguments: siteNumber, parameterCd, startDate, endDate, and interactive. The difference is in parameterCd, in this function multiple parameters can be queried using a ";" separator, and setting parameterCd <- "" will return all of the measured observations.
+
+<<label=getQW, echo=TRUE>>=
+# Using defaults:
+siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
+parameterCd <- "00618;71851"  # Dissolved Nitrate parameter codes (one as mg/l as N, one as mg/l)
+startDate <- "1964-06-11"
+endDate <- "2012-12-18"
+
+dissolvedNitrate <- getQWData(siteNumber, parameterCd, startDate, endDate)
+@
+
+Producing a dataframe with the following columns:
+<<dischargeData, echo=FALSE>>=
+names(dissolvedNitrate)
+@
+
 
 %------------------------------------------------------------
 \subsection{USGS Site Information Retrievals}
@@ -242,25 +290,42 @@ siteNumber <- "01491000" # Site ID for Choptank River near Greensboro, MD
 ChopTankInfo <- getSiteFileData(siteNumber)
 @
 
-The available date for these for the USGS sites are:
+The available data for these for the USGS sites are:
 <<siteColnames, echo=TRUE>>=
 colnames(ChopTankInfo)
+@
+Pulling out a specific example piece of information, in this case station name can be done as follows:
+<<siteNames, echo=TRUE>>=
+ChopTankInfo$station.nm
 @
 Site information is obtained from \url{http://waterservices.usgs.gov/rest/Site-Test-Tool.html}
 
 %------------------------------------------------------------
-\subsection{USGS Water Quality Retrievals}
+\subsection{USGS Parameter Information Retrievals}
 %------------------------------------------------------------
-Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The function is getQWData.
+To obtain all of the available information concerning a measured parameter, use the getParameterInfo function:
+<<label=getSite, echo=TRUE>>=
+# Using defaults:
+parameterCd <- "00618" 
+parameterINFO <- getParameterInfo(parameterCd)
+@
 
-
-
+The available data for these for the USGS sites are:
+<<siteColnames, echo=TRUE>>=
+colnames(parameterINFO)
+@
+Pulling out a specific example piece of information, in this case station name can be done as follows:
+<<siteNames, echo=TRUE>>=
+parameterINFO$parameter_nm
+@
+Parameter information is obtained from \url{http://nwis.waterdata.usgs.gov/nwis/pmcodes/}
 
 
 %------------------------------------------------------------
 \section{Polished Data: USGS Web Retrieval Examples}
 %------------------------------------------------------------ 
-In this example, we use 3 dataRetrieval functions to get daily streamflow data and inorganic nitrogen sample results, and site information for a USGS gaging station with the ID 06934500.  The station is Missouri River at Hermann, MO (which is discovered in the INFO dataset). Rather than see the raw output from NWIS, we 
+In this example, we use 3 dataRetrieval functions to get daily streamflow data and inorganic nitrogen sample results, and site information for a USGS gaging station with the ID 06934500.  The station is Missouri River at Hermann, MO (which is discovered in the INFO dataset). Rather than see the raw output from NWIS, we will get more polished returned data frames.  These data frames were exclusively designed to work with the EGRET R package, however can be very useful for all hydrologic studies.
+
 
 <<firstExample>>=
 Daily <- getDVData("06934500","00060","1970-10-01","2011-09-30")
